--- a/package.json
+++ b/package.json
@@ -9,11 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
+    "babel-eslint": "^10.1.0",
+    "class-names": "^1.0.0",
+    "concurrently": "^7.6.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "json-server": "^0.17.1",
+    "moment": "^2.29.4",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-actions": "^2.6.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "swr": "^2.0.3"
+  },
+  "devDependencies": {
+    "sass": "^1.58.0"
   }
 }
