--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
+     
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
