--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
-     
   },
   "dependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.20.7",
@@ -34,6 +33,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.8",
     "swr": "^2.0.3"
   },
   "devDependencies": {
