--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.1",
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.8",
     "swr": "^2.0.3"
